[tool.poetry]
name = "flask_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-restx = "^0.5.1"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
